[gd_scene load_steps=21 format=3 uid="uid://dkwt6cwawfvkq"]

[ext_resource type="Texture2D" uid="uid://bjjn8h3l0yohg" path="res://DATA/IMAGES/calculator_screen_back.png" id="1_hnknt"]
[ext_resource type="StyleBox" uid="uid://cbmw80df8scsy" path="res://DATA/number.stylebox" id="1_icp22"]
[ext_resource type="StyleBox" uid="uid://b3f5316xax02p" path="res://DATA/operation.stylebox" id="1_j6rgn"]
[ext_resource type="Script" path="res://SCRIPTS/main.gd" id="1_sucg2"]
[ext_resource type="Texture2D" uid="uid://by6hrlek68spa" path="res://DATA/IMAGES/calculator_screen_front.png" id="2_pxjp2"]
[ext_resource type="FontFile" uid="uid://cjw7b273ak0pi" path="res://DATA/FONTS/monogram.ttf" id="3_ea88k"]
[ext_resource type="SpriteFrames" uid="uid://bfrwp0yjsfvsj" path="res://DATA/IMAGES/sprites_animations.res" id="7_7aesu"]
[ext_resource type="AudioStream" uid="uid://d1kor5hhdtmg1" path="res://DATA/SOUND/number_select.wav" id="8_e8ae6"]
[ext_resource type="AudioStream" uid="uid://bvnv6aowtqq80" path="res://DATA/SOUND/operator_select.wav" id="9_wsepg"]
[ext_resource type="AudioStream" uid="uid://b6rjt7mrxqjua" path="res://DATA/SOUND/clear.wav" id="10_8v18u"]
[ext_resource type="AudioStream" uid="uid://cdbqk0wbwcuqq" path="res://DATA/SOUND/broken.wav" id="11_h0lt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a15wk"]
bg_color = Color(0, 0.0343941, 0.0700983, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_ercqv"]
font = ExtResource("3_ea88k")
font_size = 200
font_color = Color(0, 1, 0.713726, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4vdka"]
font = ExtResource("3_ea88k")
font_size = 100
font_color = Color(0.490196, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_42asp"]
font = ExtResource("3_ea88k")
font_size = 150
font_color = Color(0.883786, 0.102119, 4.81307e-07, 1)
outline_size = 7
outline_color = Color(0.051971, 0.051971, 0.051971, 1)
shadow_size = 0

[sub_resource type="Animation" id="Animation_r4d8s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("control_animation/layer_animation/skull_sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("control_animation/layer_animation/skull_sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("control_animation/layer_animation/label_broken:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("control_animation/layer_animation/label_broken:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("control_ui/layer_ui/label_clear:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cq0kr"]
resource_name = "broken"
length = 2.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("control_animation/layer_animation/label_broken:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("control_animation/layer_animation/label_broken:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d8pm8"]
resource_name = "broken_intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("control_animation/layer_animation/skull_sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("control_animation/layer_animation/skull_sprites:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(15, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("control_animation/layer_animation/skull_sprites:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_l320l"]
resource_name = "clear"
length = 1.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("control_ui/layer_ui/label_clear:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cpanf"]
_data = {
"RESET": SubResource("Animation_r4d8s"),
"broken": SubResource("Animation_cq0kr"),
"broken_intro": SubResource("Animation_d8pm8"),
"clear": SubResource("Animation_l320l")
}

[node name="Main" type="Node"]
script = ExtResource("1_sucg2")
metadata/_edit_vertical_guides_ = [256.0]

[node name="control_ui" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.507
anchor_right = 0.5
anchor_bottom = 0.507
offset_left = -256.0
offset_top = -356.928
offset_right = 256.0
offset_bottom = 347.072

[node name="layer_ui" type="CanvasLayer" parent="control_ui"]

[node name="background" type="ColorRect" parent="control_ui/layer_ui"]
offset_right = 512.0
offset_bottom = 704.0
color = Color(0, 0.171512, 0.193993, 0.815686)

[node name="background_keyboard" type="Panel" parent="control_ui/layer_ui"]
offset_left = 16.0
offset_top = 248.0
offset_right = 496.0
offset_bottom = 696.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a15wk")

[node name="screen_back" type="TextureRect" parent="control_ui/layer_ui"]
offset_left = 8.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 240.0
texture = ExtResource("1_hnknt")

[node name="label_clear" type="Label" parent="control_ui/layer_ui"]
modulate = Color(1, 1, 1, 0)
offset_left = 64.0
offset_top = 40.0
offset_right = 439.0
offset_bottom = 199.0
text = "CLEAR"
label_settings = SubResource("LabelSettings_ercqv")

[node name="screen_text" type="Label" parent="control_ui/layer_ui"]
offset_left = 24.0
offset_top = 24.0
offset_right = 488.0
offset_bottom = 224.0
theme_override_colors/font_color = Color(0, 0.660727, 0.659739, 1)
label_settings = SubResource("LabelSettings_4vdka")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 1

[node name="screen_front" type="TextureRect" parent="control_ui/layer_ui"]
modulate = Color(1, 1, 1, 0.713726)
offset_left = 8.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 240.0
texture = ExtResource("2_pxjp2")

[node name="numb0" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -96.0
offset_right = -80.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
mouse_force_pass_scroll_events = false
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "0"

[node name="numb1" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -184.0
offset_right = -80.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "1
"

[node name="numb2" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -184.0
offset_right = 72.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "2
"

[node name="numb3" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -184.0
offset_right = 232.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "3
"

[node name="numb4" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -272.0
offset_right = -80.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "4
"

[node name="numb5" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -272.0
offset_right = 72.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "5
"

[node name="numb6" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -272.0
offset_right = 232.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "6
"

[node name="numb7" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -360.0
offset_right = -80.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "7"

[node name="numb8" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -360.0
offset_right = 72.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "8"

[node name="numb9" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -360.0
offset_right = 232.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("1_icp22")
text = "9"

[node name="clear" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -96.0
offset_right = 72.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "C"

[node name="equals" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 152.0
offset_top = -448.0
offset_right = 224.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "="

[node name="sum" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -448.0
offset_right = 40.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "+"

[node name="minus" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -448.0
offset_right = -152.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "-
"

[node name="multiplication" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 56.0
offset_top = -448.0
offset_right = 136.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "X"

[node name="division" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -448.0
offset_right = -56.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "÷"

[node name="dot" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -96.0
offset_right = 152.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "."

[node name="back" type="Button" parent="control_ui/layer_ui" groups=["buttom"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 160.0
offset_top = -96.0
offset_right = 232.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ea88k")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_j6rgn")
text = "⬅️"

[node name="control_animation" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 512.0
offset_bottom = 704.0

[node name="layer_animation" type="CanvasLayer" parent="control_animation"]
layer = 2

[node name="skull_sprites" type="AnimatedSprite2D" parent="control_animation/layer_animation"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(264, 152)
scale = Vector2(15, 15)
sprite_frames = ExtResource("7_7aesu")
animation = &"skull_laugh"

[node name="label_broken" type="Label" parent="control_animation/layer_animation"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.523
anchor_top = 0.562
anchor_right = 0.523
anchor_bottom = 0.562
offset_left = -195.776
offset_top = -59.648
offset_right = 196.224
offset_bottom = 59.352
text = "BROKEN!"
label_settings = SubResource("LabelSettings_42asp")

[node name="animations" type="AnimationPlayer" parent="control_animation"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_cpanf")
}

[node name="sound_number" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e8ae6")

[node name="sound_operator" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wsepg")

[node name="sound_clear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8v18u")

[node name="sound_broken" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_h0lt0")

[connection signal="button_down" from="control_ui/layer_ui/numb0" to="." method="_on_numb_0_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb1" to="." method="_on_numb_1_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb2" to="." method="_on_numb_2_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb3" to="." method="_on_numb_3_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb4" to="." method="_on_numb_4_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb5" to="." method="_on_numb_5_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb6" to="." method="_on_numb_6_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb7" to="." method="_on_numb_7_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb8" to="." method="_on_numb_8_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/numb9" to="." method="_on_numb_9_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/clear" to="." method="_on_clear_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/equals" to="." method="_on_equals_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/sum" to="." method="_on_sum_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/minus" to="." method="_on_minus_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/multiplication" to="." method="_on_multiplication_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/division" to="." method="_on_division_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/dot" to="." method="_on_dot_button_down"]
[connection signal="button_down" from="control_ui/layer_ui/back" to="." method="_on_back_button_down"]
[connection signal="animation_finished" from="control_animation/layer_animation/skull_sprites" to="." method="_on_skull_sprites_animation_finished"]
[connection signal="animation_finished" from="control_animation/animations" to="." method="_on_animations_animation_finished"]
